fixed pies getting cut off at the edge

--- a/public/less/chart/piestats.less
+++ b/public/less/chart/piestats.less
@@ -1,5 +1,12 @@
 piestats{
+
   svg {
+    padding-top: 11px;
+    padding-left: 11px;
+    width: 125px;
+    height: 125px;
+    right: 0;
+
     .solidArc{
       transform: scale(0.85);
       transform-origin: center;
@@ -18,7 +25,7 @@ piestats{
     line-height: 1;
     font-weight: bold;
     padding: 12px;
-    background: rgba(0, 0, 0, 0.8);
+    background-color: #000000;
     color: #fff;
     border-radius: 2px;
     pointer-events: none;
@@ -65,6 +72,7 @@ piestats{
     margin: -4px 0 0 0;
     top: 50%;
     left: -8px;
+    background: orange !important;
   }
 
   /* Southward tooltips */
