--- a/public/less/player.less
+++ b/public/less/player.less
@@ -286,16 +286,16 @@
 
         }
 
-        &#arm {
+        &#elbow {
           top: 23%;
           left: 23.5%;
         }
 
-        &#throwShoulder {
+        &#shoulder {
           top: 17%;
           left: 35%;
         }
-        &#otherShoulder {
+        &#trunk {
           top: 28%;
           left: 45%;
         }
